--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
       <img class="front-face" src="react.svg" alt="React" />
       <img class="back-face" src="js-badge.svg" alt="JS Badge" />
     </div>
+    
+     <div id="win-modal" class="modal">
+
+        <div class="modal-content">
+            <p>Congratulations! You Won!</p>
+            <p>With <span class="moves">0</span> moves and <span class="num-stars">3</span> stars</p>
+            <p>Completion time: <span class="timer">0:00</span></p>
+            <button class="play-again onclick="location.reload(true);">Play Again!</button>
+          </div>
   </section>
 
   <script src="scripts.js"></script>
