--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
       <img class="front-face" src="react.svg" alt="React" />
       <img class="back-face" src="js-badge.svg" alt="JS Badge" />
     </div>
-    
-     <div id="win-modal" class="modal">
+  </section>
+  </ul>
+
+        <div id="win-modal" class="modal">
 
         <div class="modal-content">
             <p>Congratulations! You Won!</p>
@@ -71,7 +73,10 @@
             <p>Completion time: <span class="timer">0:00</span></p>
             <button class="play-again onclick="location.reload(true);">Play Again!</button>
           </div>
-  </section>
+
+        </div>
+
+    </div>
 
   <script src="scripts.js"></script>
 </body>
