--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+ <div class="container">
+        <header>
+            <h1>Matching Game</h1>
+        </header>
+
+        <section class="score-panel">
+        	<ul class="stars">
+        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li>
+        	</ul>
+
+        	<span class="moves">0</span> Moves
+
+            <span class="timer">0:00</span>
+
+            <div class="restart">
+        		<i class="fa fa-repeat"></i>
+        	</div>
+        </section>
   <section class="memory-game">
     <div class="memory-card" data-framework="aurelia">
       <img class="front-face" src="aurelia.svg" alt="Aurelia" />
@@ -63,7 +83,7 @@
       <img class="back-face" src="js-badge.svg" alt="JS Badge" />
     </div>
   </section>
-  </ul>
+  
 
         <div id="win-modal" class="modal">
 
