--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Memory Game Project for Udacity">
-    <title>Matching Game</title>
+  <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="styles.css">
+  <title>Memory Game</title>
+
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div class="container">
+ <div class="container">
         <header>
             <h1>Matching Game</h1>
         </header>
@@ -29,57 +28,62 @@
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
+  <section class="memory-game">
+    <div class="memory-card" data-framework="aurelia">
+      <img class="front-face" src="aurelia.svg" alt="Aurelia" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+    <div class="memory-card" data-framework="aurelia">
+      <img class="front-face" src="aurelia.svg" alt="Aurelia" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
 
-        <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-        </ul>
+    <div class="memory-card" data-framework="vue">
+      <img class="front-face" src="vue.svg" alt="Vue" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+    <div class="memory-card" data-framework="vue">
+      <img class="front-face" src="vue.svg" alt="Vue" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+
+    <div class="memory-card" data-framework="angular">
+      <img class="front-face" src="angular.svg" alt="Angular" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+    <div class="memory-card" data-framework="angular">
+      <img class="front-face" src="angular.svg" alt="Angular" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+
+    <div class="memory-card" data-framework="ember">
+      <img class="front-face" src="ember.svg" alt="Ember" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+    <div class="memory-card" data-framework="ember">
+      <img class="front-face" src="ember.svg" alt="Ember" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+
+    <div class="memory-card" data-framework="backbone">
+      <img class="front-face" src="backbone.svg" alt="Backbone" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+    <div class="memory-card" data-framework="backbone">
+      <img class="front-face" src="backbone.svg" alt="Backbone" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+
+    <div class="memory-card" data-framework="react">
+      <img class="front-face" src="react.svg" alt="React" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+    <div class="memory-card" data-framework="react">
+      <img class="front-face" src="react.svg" alt="React" />
+      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+    </div>
+  </section>
+  
 
         <div id="win-modal" class="modal">
 
@@ -93,6 +97,7 @@
         </div>
 
     </div>
-   <script src="scripts.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
