--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-
-  <title>Memory Game</title>
-
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <title>Memory Game</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" >
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
- <div class="container">
+
+    <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Memory Game</h1>
         </header>
 
         <section class="score-panel">
@@ -20,84 +24,85 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span> Moves
+        	<span class="moves">0</span> Move(s)
 
-            <span class="timer">0:00</span>
+            <div class="timer">
+            </div>
 
-            <div class="restart">
+            <div class="restart" onclick=startGame()>
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
-  <section class="memory-game">
-    <div class="memory-card" data-framework="aurelia">
-      <img class="front-face" src="aurelia.svg" alt="Aurelia" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-    <div class="memory-card" data-framework="aurelia">
-      <img class="front-face" src="aurelia.svg" alt="Aurelia" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
 
-    <div class="memory-card" data-framework="vue">
-      <img class="front-face" src="vue.svg" alt="Vue" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-    <div class="memory-card" data-framework="vue">
-      <img class="front-face" src="vue.svg" alt="Vue" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
+        <ul class="deck" id="card-deck">
+            <li class="card" type="aurelia">
+                <img class="front-face" src="aurelia.svg" alt="Aurelia" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="aurelia">
+                <img class="front-face" src="aurelia.svg" alt="Aurelia" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card match" type="vue">
+                <img class="front-face" src="vue.svg" alt="Vue" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card match" type="vue">
+                <img class="front-face" src="vue.svg" alt="Vue" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="angular">
+                <img class="front-face" src="angular.svg" alt="Angular" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="angular">
+                <img class="front-face" src="angular.svg" alt="Angular" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="ember">
+                <img class="front-face" src="ember.svg" alt="Ember" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="ember">
+                <img class="front-face" src="ember.svg" alt="Ember" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="backbone">
+                <img class="front-face" src="backbone.svg" alt="Backbone" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="backbone">
+                <img class="front-face" src="backbone.svg" alt="Backbone" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="react">
+                <img class="front-face" src="react.svg" alt="React" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+            </li>
+            <li class="card" type="react">
+                <img class="front-face" src="react.svg" alt="React" />
+                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+        </ul>
 
-    <div class="memory-card" data-framework="angular">
-      <img class="front-face" src="angular.svg" alt="Angular" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-    <div class="memory-card" data-framework="angular">
-      <img class="front-face" src="angular.svg" alt="Angular" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-
-    <div class="memory-card" data-framework="ember">
-      <img class="front-face" src="ember.svg" alt="Ember" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-    <div class="memory-card" data-framework="ember">
-      <img class="front-face" src="ember.svg" alt="Ember" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-
-    <div class="memory-card" data-framework="backbone">
-      <img class="front-face" src="backbone.svg" alt="Backbone" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-    <div class="memory-card" data-framework="backbone">
-      <img class="front-face" src="backbone.svg" alt="Backbone" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-
-    <div class="memory-card" data-framework="react">
-      <img class="front-face" src="react.svg" alt="React" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-    <div class="memory-card" data-framework="react">
-      <img class="front-face" src="react.svg" alt="React" />
-      <img class="back-face" src="js-badge.svg" alt="JS Badge" />
-    </div>
-  </section>
-  
-
-        <div id="win-modal" class="modal">
-
-        <div class="modal-content">
-            <p>Congratulations! You Won!</p>
-            <p>With <span class="moves">0</span> moves and <span class="num-stars">3</span> stars</p>
-            <p>Completion time: <span class="timer">0:00</span></p>
-            <button class="play-again onclick="location.reload(true);">Play Again!</button>
-          </div>
-
+        <div id="popup1" class="overlay">
+            <div class="popup">
+                <h2>Congratulations 🎉</h2>
+                <a class="close" href=# >×</a>
+                <div class="content-1">
+                    Congratulations you're a winner 🎉🎉
+                </div>
+                <div class="content-2">
+                    <p>You made <span id=finalMove> </span> moves </p>
+                    <p>in <span id=totalTime> </span> </p>
+                    <p>Rating:  <span id=starRating></span></p>
+                </div>
+                <button id="play-again"onclick="playAgain()">
+                    Play again 😄</a>
+                </button>
+            </div>
         </div>
 
     </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
