--- a/index.html
+++ b/index.html
@@ -36,41 +36,40 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="aurelia">
-                <img class="front-face" src="aurelia.svg" alt="Aurelia" />
+                <img class="back-face" src="aurelia.svg" alt="Aurelia" />
             </li>
             <li class="card" type="aurelia">
-                <img class="front-face" src="aurelia.svg" alt="Aurelia" />
+                <img class="back-face" src="aurelia.svg" alt="Aurelia" />
              </li>
             <li class="card match" type="vue">
-                <img class="front-face" src="vue.svg" alt="Vue" />
+                <img class="back-face" src="vue.svg" alt="Vue" />
             </li>
             <li class="card match" type="vue">
-                <img class="front-face" src="vue.svg" alt="Vue" />
+                <img class="back-face" src="vue.svg" alt="Vue" />
            </li>
             <li class="card" type="angular">
-                <img class="front-face" src="angular.svg" alt="Angular" />
+                <img class="back-face" src="angular.svg" alt="Angular" />
             </li>
             <li class="card" type="angular">
-                <img class="front-face" src="angular.svg" alt="Angular" />
+                <img class="back-face" src="angular.svg" alt="Angular" />
             </li>
             <li class="card" type="ember">
-                <img class="front-face" src="ember.svg" alt="Ember" />
+                <img class="back-face" src="ember.svg" alt="Ember" />
             </li>
             <li class="card" type="ember">
-                <img class="front-face" src="ember.svg" alt="Ember" />
+                <img class="back-face" src="ember.svg" alt="Ember" />
             </li>
             <li class="card" type="backbone">
-                <img class="front-face" src="backbone.svg" alt="Backbone" />
+                <img class="back-face" src="backbone.svg" alt="Backbone" />
             </li>
             <li class="card" type="backbone">
-                <img class="front-face" src="backbone.svg" alt="Backbone" />
-                <img class="back-face" src="js-badge.svg" alt="JS Badge" />
+                <img class="back-face" src="backbone.svg" alt="Backbone" />
             </li>
             <li class="card" type="react">
-                <img class="front-face" src="react.svg" alt="React" />
+                <img class="back-face" src="react.svg" alt="React" />
             </li>
             <li class="card" type="react">
-                <img class="front-face" src="react.svg" alt="React" />
+                <img class="back-face" src="react.svg" alt="React" />
         </ul>
 
         <div id="popup1" class="overlay">
