--- a/index.html
+++ b/index.html
@@ -35,41 +35,54 @@
         </section>
 
         <ul class="deck" id="card-deck">
-            <li class="card" type="aurelia">
-                <img class="back-face" src="aurelia.svg" alt="Aurelia" />
+            <li class="card" type="diamond">
+                <i class="fa fa-diamond"></i>
             </li>
-            <li class="card" type="aurelia">
-                <img class="back-face" src="aurelia.svg" alt="Aurelia" />
-             </li>
-            <li class="card match" type="vue">
-                <img class="back-face" src="vue.svg" alt="Vue" />
+            <li class="card" type="plane">
+                <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card match" type="vue">
-                <img class="back-face" src="vue.svg" alt="Vue" />
-           </li>
-            <li class="card" type="angular">
-                <img class="back-face" src="angular.svg" alt="Angular" />
+            <li class="card match" type="anchor">
+                <i class="fa fa-anchor"></i>
             </li>
-            <li class="card" type="angular">
-                <img class="back-face" src="angular.svg" alt="Angular" />
+            <li class="card" type="bolt" >
+                <i class="fa fa-bolt"></i>
             </li>
-            <li class="card" type="ember">
-                <img class="back-face" src="ember.svg" alt="Ember" />
+            <li class="card" type="cube">
+                <i class="fa fa-cube"></i>
             </li>
-            <li class="card" type="ember">
-                <img class="back-face" src="ember.svg" alt="Ember" />
+            <li class="card match" type="anchor">
+                <i class="fa fa-anchor"></i>
             </li>
-            <li class="card" type="backbone">
-                <img class="back-face" src="backbone.svg" alt="Backbone" />
+            <li class="card" type="leaf">
+                <i class="fa fa-leaf"></i>
             </li>
-            <li class="card" type="backbone">
-                <img class="back-face" src="backbone.svg" alt="Backbone" />
+            <li class="card" type="bicycle">
+                <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card" type="react">
-                <img class="back-face" src="react.svg" alt="React" />
+            <li class="card" type="diamond">
+                <i class="fa fa-diamond"></i>
             </li>
-            <li class="card" type="react">
-                <img class="back-face" src="react.svg" alt="React" />
+            <li class="card" type="bomb">
+                <i class="fa fa-bomb"></i>
+            </li>
+            <li class="card" type="leaf">
+                <i class="fa fa-leaf"></i>
+            </li>
+            <li class="card" type="bomb">
+                <i class="fa fa-bomb"></i>
+            </li>
+            <li class="card open show" type="bolt">
+                <i class="fa fa-bolt"></i>
+            </li>
+            <li class="card" type="bicycle">
+                <i class="fa fa-bicycle"></i>
+            </li>
+            <li class="card" type="plane">
+                <i class="fa fa-paper-plane-o"></i>
+            </li>
+            <li class="card" type="cube">
+                <i class="fa fa-cube"></i>
+            </li>
         </ul>
 
         <div id="popup1" class="overlay">
