--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" >
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="icons.fallback.css">
 </head>
 <body>
 
@@ -36,7 +37,7 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <i class="fa fa-diamond"></i>
+                <i class="icon-lact_btrans"></i>
             </li>
             <li class="card" type="plane">
                 <i class="fa fa-paper-plane-o"></i>
@@ -60,7 +61,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="diamond">
-                <i class="fa fa-diamond"></i>
+                <i class="icon-lact_btrans"></i>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
