--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
                 <i class="icon-lact_btrans"></i>
+		    <code>.icon-lact_btrans</code>
             </li>
             <li class="card" type="plane">
                 <i class="fa fa-paper-plane-o"></i>
@@ -65,6 +66,7 @@
             </li>
             <li class="card" type="diamond">
                 <i class="icon-lact_btrans"></i>
+		    <code>.icon-lact_btrans</code>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
