--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" >
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="icons.fallback.css">
+	<link rel="stylesheet" href="icons.data.svg.css">
 </head>
 <body>
 
