--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <i class="icon-lact_btrans"></i>
+                <div class="icon-lact_btrans"></div>
             </li>
             <li class="card" type="plane">
                 <i class="fa fa-paper-plane-o"></i>
@@ -70,7 +70,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="diamond">
-                <i class="icon-lact_btrans"></i>
+                <div class="icon-lact_btrans"></div>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
