--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="icon-tri_btrans"></div>
             </li>
             <li class="card" type="plane">
-                <img src =lac_gtrans.svg>
+		    <i class="icon-lac_gtrans"></i>
             </li>
             <li class="card match" type="anchor">
                 <i class="fa fa-anchor"></i>
@@ -68,7 +68,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="diamond">
-                <div class="icon-tri_btrans"></div>
+                    <i class="icon-lac_gtrans"></i>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
