--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="plane">
-                <img src =lac_gtrans.svg>
+                <i class="icon-lac_gtrans"></i>
             </li>
             <li class="card" type="cube">
                 <i class="fa fa-cube"></i>
