--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <div class="icon-tri_btrans"></div>
+                <div class="icon-triglyceride btrans"></div>
             </li>
             <li class="card" type="plane">
-		    <i class="icon-lac_gtrans"></i>
+		    <div class="icon-lactose gtrans" ></div><hr/>
             </li>
             <li class="card match" type="anchor">
                 <i class="fa fa-anchor"></i>
@@ -69,7 +69,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="diamond">
-                    <i class="icon-lac_gtrans"></i>
+                    <div class="icon-triglyceride btrans"></div>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
@@ -87,7 +87,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="plane">
-                <i class="icon-lac_gtrans"></i>
+                <div class="icon-lactose gtrans"></div><hr/>
             </li>
             <li class="card" type="cube">
                 <i class="fa fa-cube"></i>
