--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="icons.fallback.css">
 	<link rel="stylesheet" href="icons.data.svg.css">
+	<link rel="stylesheet" href="icons.data.png.css">
 	<script>
 			
 			/*! grunt-grunticon Stylesheet Loader - v2.1.2 | https://github.com/filamentgroup/grunticon | (c) 2015 Scott Jehl, Filament Group, Inc. | MIT license. */
