--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="icon-triglyceride-btrans"></div>
             </li>
             <li class="card" type="plane">
-		    <div class="icon-lactose-gtrans" style="width: 100%; height: 100%" ></div><hr/>
+		    <div class="icon-lactose-gtrans"></div>
             </li>
             <li class="card match" type="anchor">
                 <i class="fa fa-anchor"></i>
