--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" >
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="icons.fallback.css">
-	<link rel="stylesheet" href="icons.data.svg.css">
-	<link rel="stylesheet" href="icons.data.png.css">
+    <link rel="stylesheet prefetch" href="icons.fallback.css">
+	<link rel="stylesheet prefetch" href="icons.data.svg.css">
+	<link rel="stylesheet prefetch" href="icons.data.png.css">
 	<script>
 			
 			/*! grunt-grunticon Stylesheet Loader - v2.1.2 | https://github.com/filamentgroup/grunticon | (c) 2015 Scott Jehl, Filament Group, Inc. | MIT license. */
