--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <div class="icon-triglyceride-btrans"></div>
+                <i class="icon-triglyceride-btrans"></i>
             </li>
             <li class="card" type="plane">
-		    <div class="icon-lactose-gtrans"></div>
+		    <i class="icon-lactose-gtrans"></i>
             </li>
             <li class="card match" type="anchor">
                 <i class="fa fa-anchor"></i>
@@ -70,7 +70,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="diamond">
-                    <div class="icon-triglyceride-btrans"></div>
+                    <i class="icon-triglyceride-btrans"></i>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
@@ -88,7 +88,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="plane">
-                <div class="icon-lactose-gtrans"></div><hr/>
+                <i class="icon-lactose-gtrans"></i><hr/>
             </li>
             <li class="card" type="cube">
                 <i class="fa fa-cube"></i>
