--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <i class="icon-triglyceride-btrans"></i>
+                <i class="icon icon-triglyceride-btrans"></i>
             </li>
             <li class="card" type="plane">
-		    <i class="icon-lactose-gtrans"></i>
+		    <i class="icon icon-lactose-gtrans"></i>
             </li>
             <li class="card match" type="anchor">
                 <i class="fa fa-anchor"></i>
@@ -68,7 +68,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="diamond">
-                    <i class="icon-triglyceride-btrans"></i>
+                    <i class="icon icon-triglyceride-btrans"></i>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
@@ -86,7 +86,7 @@
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card" type="plane">
-                <i class="icon-lactose-gtrans"></i><hr/>
+                <i class="icon icon-lactose-gtrans"></i><hr/>
             </li>
             <li class="card" type="cube">
                 <i class="fa fa-cube"></i>
