--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" >
-	<link rel="stylesheet" href="https://i.icomoon.io/public/temp/99c97ed677/UntitledProject/style.css">
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -44,7 +43,7 @@
 		    <i class="icon-lactose-gtrans"></i>
             </li>
             <li class="card match" type="anchor">
-                <i class="fa fa-anchor"></i>
+                <i class="icon-lactose-btrans"></i>
             </li>
             <li class="card" type="bolt" >
                 <i class="fa fa-bolt"></i>
@@ -53,7 +52,7 @@
                 <i class="fa fa-cube"></i>
             </li>
             <li class="card match" type="anchor">
-                <i class="fa fa-anchor"></i>
+                <i class="icon-lactose-btrans"></i>
             </li>
             <li class="card" type="leaf">
                 <i class="fa fa-leaf"></i>
