--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <i class="icon-lactose-btrans"></i>
             </li>
             <li class="card" type="bolt" >
-                <i class="fa fa-bolt"></i>
+                <i class="icon-lysine-btrans"></i>
             </li>
             <li class="card" type="cube">
-                <i class="fa fa-cube"></i>
+                <i class="icon-triglyceride-gtrans"></i>
             </li>
             <li class="card match" type="anchor">
                 <i class="icon-lactose-btrans"></i>
@@ -58,7 +58,7 @@
                 <i class="fa fa-leaf"></i>
             </li>
             <li class="card" type="bicycle">
-                <i class="fa fa-bicycle"></i>
+                <i class="icon-lysine-gtrans"></i>
             </li>
             <li class="card" type="diamond">
                     <i class="icon-triglyceride-btrans"></i>
@@ -73,10 +73,10 @@
                 <i class="fa fa-bomb"></i>
             </li>
             <li class="card open show" type="bolt">
-                <i class="fa fa-bolt"></i>
+                <i class="icon-lysine-btrans"></i>
             </li>
             <li class="card" type="bicycle">
-                <i class="fa fa-bicycle"></i>
+                <i class="icon-lysine-gtrans"></i>
             </li>
             <li class="card" type="plane">
 
@@ -84,7 +84,7 @@
 
             </li>
             <li class="card" type="cube">
-                <i class="fa fa-cube"></i>
+                <i class="icon-triglyceride-gtrans"></i>
             </li>
         </ul>
 
