--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <i class="icon-triglyceride-btrans"></i>
+                <div class="icon-triglyceride-btrans"></div>
             </li>
             <li class="card" type="plane">
-		    <i class="icon-lactose-gtrans"></i>
+		    <div class="icon-lactose-gtrans"></div>
             </li>
             <li class="card match" type="anchor">
-                <i class="icon-lactose-btrans"></i>
+                <div class="icon-lactose-btrans"></div>
             </li>
             <li class="card" type="bolt" >
-                <i class="icon-lysine-btrans"></i>
+                <div class="icon-lysine-btrans"></div>
             </li>
             <li class="card" type="cube">
-                <i class="icon-triglyceride-gtrans"></i>
+                <div class="icon-triglyceride-gtrans"></div>
             </li>
             <li class="card match" type="anchor">
-                <i class="icon-lactose-btrans"></i>
+                <div class="icon-lactose-btrans"></div>
             </li>
             <li class="card" type="leaf">
                 <i class="fa fa-leaf"></i>
             </li>
             <li class="card" type="bicycle">
-                <i class="icon-lysine-gtrans"></i>
+                <div class="icon-lysine-gtrans"></div>
             </li>
             <li class="card" type="diamond">
-                    <i class="icon-triglyceride-btrans"></i>
+                    <div class="icon-triglyceride-btrans"></div>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
@@ -73,18 +73,18 @@
                 <i class="fa fa-bomb"></i>
             </li>
             <li class="card open show" type="bolt">
-                <i class="icon-lysine-btrans"></i>
+                <div class="icon-lysine-btrans"></div>
             </li>
             <li class="card" type="bicycle">
-                <i class="icon-lysine-gtrans"></i>
+                <div class="icon-lysine-gtrans"></div>
             </li>
             <li class="card" type="plane">
 
-                <i class="icon-lactose-gtrans"></i>
+                <div class="icon-lactose-gtrans"></div>
 
             </li>
             <li class="card" type="cube">
-                <i class="icon-triglyceride-gtrans"></i>
+                <div class="icon-triglyceride-gtrans"></div>
             </li>
         </ul>
 
