--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" >
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/99c97ed677/UntitledProject/style.css">
+	<link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
